tests/negative/regression/r12.orng
fn main() -> Int { 
    if const x: -x; true {}
}